# HelloWorldCF

./: README.md  agent.py  agent_specs.py  bing_agent.py  cf_cleanup.py  cf_lgraph_tickets.py  cf_lgraph_tickets_02.py  cf_lgraph_tickets_03.py  company_policy.txt  file_search.py  foundry_utils.py  main.py  pyproject.toml  simple_researcher.py  weather_agent01.py  weather_agent02.py
